Add notebook to split dataset

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,6 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Please tell me who you are.\n",
+      "\n",
+      "Run\n",
+      "\n",
+      "  git config --global user.email \"you@example.com\"\n",
+      "  git config --global user.name \"Your Name\"\n",
+      "\n",
+      "to set your account's default identity.\n",
+      "Omit --global to set the identity only in this repository.\n",
+      "\n",
+      "fatal: unable to auto-detect email address (got 'root@ea9c58b20389.(none)')\n",
+      "Username for 'https://github.com': ^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add -A\n",
+    "!git commit -m \"Add notebook to split dataset\"\n",
+    "!git push origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -159,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ml-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
